Arreglo de clases DAL

--- a/Red_Social_Citas/Views/Index/Index.cshtml
+++ b/Red_Social_Citas/Views/Index/Index.cshtml
@@ -6,67 +6,67 @@
 
 <header>
     <div class="container-fluid">
-        <div class="banner">
-            <div class=" col-md-5 col-md-offset-6">
-                <div class="panel panel-primary">
+        <div class="hero">
+            <div class="col-md-5 col-md-offset-6">
+                <div class="panel panel-primary registrate">
                     <div class="panel-heading">
                         Registrate
                     </div>
                     <div class="panel-body">
-                        @using (@Html.BeginForm()){
+                        @using (@Html.BeginForm("Registrar","Usuario",FormMethod.Post)){
                         <table>
                             <tr>
                                 <td>
-                                    @Html.LabelFor(model => model.nom_usu)
+                                    @Html.LabelFor(model => model.nom_usu):
                                 </td>
                                 <td>
                                     @Html.EditorFor(model => model.nom_usu)
-                                    @Html.ValidationMessageFor(model => model.nom_usu)
+                                    @Html.ValidationMessageFor(model => model.nom_usu,"")
                                 </td>
                             </tr>
                             <tr>
                                 <td>
-                                    @Html.LabelFor(model => model.apePat_usu)
+                                    @Html.LabelFor(model => model.apePat_usu):
                                 </td>
                                 <td>
                                     @Html.EditorFor(model => model.apePat_usu)
-                                    @Html.ValidationMessageFor(model => model.apePat_usu)
+                                    @Html.ValidationMessageFor(model => model.apePat_usu,"")
                                 </td>
                             </tr>
                             <tr>
                                 <td>
-                                    @Html.LabelFor(model => model.apeMat_usu)
+                                    @Html.LabelFor(model => model.apeMat_usu):
                                 </td>
                                 <td>
                                     @Html.EditorFor(model => model.apeMat_usu)
-                                    @Html.ValidationMessageFor(model => model.apeMat_usu)
+                                    @Html.ValidationMessageFor(model => model.apeMat_usu,"")
                                 </td>
                             </tr>
                             <tr>
                                 <td>
-                                    @Html.LabelFor(model => model.fecNac_usu)
+                                    @Html.LabelFor(model => model.fecNac_usu):
                                 </td>
                                 <td>
                                     @Html.EditorFor(model => model.fecNac_usu)
-                                    @Html.ValidationMessageFor(model => model.fecNac_usu)
+                                    @Html.ValidationMessageFor(model => model.fecNac_usu,"")
                                 </td>
                             </tr>
                             <tr>
                                 <td>
-                                    @Html.LabelFor(model => model.email_usu)
+                                    @Html.LabelFor(model => model.email_usu):
                                 </td>
                                 <td>
                                     @Html.EditorFor(model => model.email_usu)
-                                    @Html.ValidationMessageFor(model => model.email_usu)
+                                    @Html.ValidationMessageFor(model => model.email_usu,"")
                                 </td>
                             </tr>
                             <tr>
                                 <td>
-                                    @Html.LabelFor(model => model.sexo_usu)
+                                    @Html.LabelFor(model => model.sexo_usu):
                                 </td>
                                 <td>
                                     @Html.EditorFor(model => model.sexo_usu)
-                                    @Html.ValidationMessageFor(model => model.sexo_usu)
+                                    @Html.ValidationMessageFor(model => model.sexo_usu,"")
                                 </td>
                             </tr>
                             <tr>
