--- a/Red_Social_Citas/Views/Shared/_Login-Layout.cshtml
+++ b/Red_Social_Citas/Views/Shared/_Login-Layout.cshtml
@@ -12,18 +12,18 @@
         <nav class="navbar navbar-default navbar-fixed-top">
             <div class="container-fluid">
                 <div class="navbar-header">
-                    <img src="~/Images/logo.png" height="60" width="160"/>
+                    <img src="~/Images/logo.png" height="60" width="160" />
                 </div>
 
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
                         <li><a href="#">Inicio</a></li>
                         <li><a href="#">Nosotros</a></li>
-                        <li><a href="#">Blogs</a></li> 
+                        <li><a href="#">Blogs</a></li>
                         <li><a href="#">Contacto</a></li>
                     </ul>
-                    <ul class="nav navbar-nav navbar-left">
-                        <li>@Html.ActionLink("Cerrar Sesion","Usuario","CerrarSesion")</li>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li>@Html.ActionLink("Cerrar Sesion", "Usuario", "CerrarSesion")</li>
                     </ul>
                 </div>
 
@@ -31,7 +31,9 @@
         </nav>
     </nav>
 
-    @RenderBody()
+    <div class="renderBody">
+        @RenderBody()
+    </div>
 
     <footer>
         <center><p>2015 Todos los derechos reservados</p></center>
