--- a/Red_Social_Citas/Views/Shared/_Login-Layout.cshtml
+++ b/Red_Social_Citas/Views/Shared/_Login-Layout.cshtml
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <title>@ViewBag.Title</title>
     @Styles.Render("~/Content/css")
+    @Styles.Render("~/Content/themes/base/css")
 
 </head>
 <body>
@@ -39,6 +40,7 @@
         <center><p>2015 Todos los derechos reservados</p></center>
     </footer>
 
+   
     @Scripts.Render("~/bundles/scripts")
     @RenderSection("scripts", required: false)
 </body>
