--- a/Red_Social_Citas/Content/estilos.css
+++ b/Red_Social_Citas/Content/estilos.css
@@ -15,3 +15,14 @@
     margin-top:60px;
 }
 
+.pregunta{
+    margin-left:60px;
+    margin-top:30px;
+}
+
+.opcion{
+    margin-left:30px;
+}
+
+
+
