--- a/Red_Social_Citas/Views/Shared/_Logout-Layout.cshtml
+++ b/Red_Social_Citas/Views/Shared/_Logout-Layout.cshtml
@@ -1,11 +1,10 @@
-﻿@model Dominio.Core.Entities.Usuario
-
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <title>@ViewBag.Title</title>
+    @Styles.Render("~/Content/themes/base/css")
     @Styles.Render("~/Content/css")
 
 </head>
@@ -30,12 +29,12 @@
                             {
                                 <table>
                                     <tr>
-                                        <td>@Html.LabelFor(model => model.email_usu):</td>
-                                        <td>@Html.LabelFor(model => model.contr_usu):</td>
+                                        <td>@Html.Label("Email:")</td>
+                                        <td>@Html.Label("Contraseña:")</td>
                                     </tr>
                                     <tr>
-                                        <td>@Html.EditorFor(model => model.email_usu)</td>
-                                        <td>@Html.EditorFor(model => model.contr_usu)</td>
+                                        <td>@Html.TextBox("email","" ,new { placeholder = "javier@gmail.com"})</td>
+                                        <td>@Html.Password("contrasena", "", new { placeholder = "•••••••" })</td>
                                         <td><input type="submit" value="Ingresar"></td>
                                     </tr>
                                 </table>
@@ -56,5 +55,14 @@
 
     @Scripts.Render("~/bundles/scripts")
     @RenderSection("scripts", required: false)
+
+    <script>
+        $(document).ready(function () {
+            $(".datePicker").datepicker({
+                dateFormat: "yy/mm/dd"
+            });
+        });
+    </script>
+
 </body>
 </html>
