Avance de vistas

--- a/Red_Social_Citas/Views/Usuario/Registrar.cshtml
+++ b/Red_Social_Citas/Views/Usuario/Registrar.cshtml
@@ -7,7 +7,7 @@
 <div class="row">
     <div class="col-md-8">
         <h2>Informacion personal</h2>
-        <p>Esta pequeña encuesta nos ayudara a encontrarte perseonas compatibles contigo</p>
+        <p>Esta pequeña encuesta nos ayudara a encontrarte personas compatibles contigo</p>
     </div>
 
     <div class="col-md-4">
@@ -46,4 +46,5 @@
     </div>
 </div>
 }
+
 
