--- a/Red_Social_Citas/Views/Usuario/Registrar4.cshtml
+++ b/Red_Social_Citas/Views/Usuario/Registrar4.cshtml
@@ -40,7 +40,7 @@
         <div class="pregunta">
             <h3>¿Cuanto es tu ingreso mensual aproximado?</h3>
             <div class="opcion">
-                @Html.DropDownList("con_ing", (SelectList)@ViewBag.ingresos)
+                @Html.DropDownList("cod_ing", (SelectList)@ViewBag.ingresos)
             </div>
         </div>
         <div class="col-md-offset-8">
