--- a/Red_Social_Citas/Views/Usuario/Registrar7.cshtml
+++ b/Red_Social_Citas/Views/Usuario/Registrar7.cshtml
@@ -39,9 +39,9 @@
                 ¿Te importaría que tu pareja ganase menos que tú?
             </h3>
             <div class="opcion">
-                <input type="radio" name="cod_ing" value="Si" />Si
+                <input type="radio" name="ing_interes" value="Si" checked="checked"/>Si
                 <br />
-                <input type="radio" name="cod_ing" value="No" />No
+                <input type="radio" name="ing_interes" value="No" />No
             </div>
         </div>
 
