--- a/Red_Social_Citas/Views/Usuario/Registrar8.cshtml
+++ b/Red_Social_Citas/Views/Usuario/Registrar8.cshtml
@@ -19,20 +19,10 @@
 
 @using (@Html.BeginForm("Registrar9", "Usuario", FormMethod.Post))
 {
-
-    <div class="row">
-        <div class="pregunta">
-            <h3>Ingrese contraseña:</h3>
-            <div class="opcion">
-                <input type="password" name="contr_usu" />
-            </div>
-        </div>
-    </div>
-
     <div class="row">
         <div class="pregunta">
             <h3>
-              Repetir Contraseña:
+                Subir 3 fotos:
             </h3>
             <div class="opcion">
                 <input type="password" name="contr_usu" />
