Listado de usuario y +

--- a/Red_Social_Citas/Views/Usuario/Registrar6.cshtml
+++ b/Red_Social_Citas/Views/Usuario/Registrar6.cshtml
@@ -35,7 +35,7 @@
                 ¿Saldrías con alguien con hijos?
             </h3>
             <div class="opcion">
-                <input type="radio" name="hijos_interes" value="Si" />Si
+                <input type="radio" name="hijos_interes" value="Si" checked="checked"/>Si
                 <br />
                 <input type="radio" name="hijos_interes" value="No" />No
             </div>
