--- a/Red_Social_Citas/Views/Usuario/Registrar7.cshtml
+++ b/Red_Social_Citas/Views/Usuario/Registrar7.cshtml
@@ -22,7 +22,7 @@
 
     <div class="row">
         <div class="pregunta">
-            <h3>¿Qué ccualidades debería tener tu pareja?</h3>
+            <h3>¿Qué cualidades debería tener tu pareja?</h3>
             <div class="opcion">
                 @foreach (var cualidad in ViewBag.cualidades as List<Dominio.Core.Entities.Cualidad>)
                 {
