--- a/Red_Social_Citas/Views/Shared/_Login-Layout.cshtml
+++ b/Red_Social_Citas/Views/Shared/_Login-Layout.cshtml
@@ -24,7 +24,7 @@
                         <li><a href="#">Contacto</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
-                        <li>@Html.ActionLink("Cerrar Sesion", "Usuario", "CerrarSesion")</li>
+                        <li>@Html.ActionLink("Cerrar Sesion", "CerrarSesion", "Usuario")</li>
                     </ul>
                 </div>
 
