--- a/Red_Social_Citas/Views/Usuario/Perfil.cshtml
+++ b/Red_Social_Citas/Views/Usuario/Perfil.cshtml
@@ -1,6 +1,80 @@
 ﻿@{
     ViewBag.Title = "Perfil";
+    Layout = "~/Views/Shared/_Login-Layout.cshtml";
+    Dominio.Core.Entities.Usuario usuario = (Dominio.Core.Entities.Usuario)Session["usuario"];
 }
 
 <h2>Perfil</h2>
 
+<div class="row">
+    <div class="col-md-5 col-md-offset-1">
+        <div class="panel panel-default">
+            <div class="panel-heading">Datos personales</div>
+            <div class="panel-body" style="min-height:30em">
+                <table>
+                    <tr>
+                        <td><img id="foto1" src="~/Fotos/@ViewBag.ruta" width="242" height="200" /></td>
+                    </tr>
+                    <tr>
+                        <td>Nombre: </td>
+                        <td>@usuario.nom_usu</td>
+                    </tr>
+                    <tr>
+                        <td>Apellidos: </td>
+                        <td>@usuario.apePat_usu @usuario.apeMat_usu</td>
+                    </tr>
+                    <tr>
+                        <td>Edad: </td>
+                        <td>@usuario.calcularEdad(usuario.fecNac_usu)</td>
+                    </tr>
+                    <tr>
+                        <td>Sexo: </td>
+                        <td>@usuario.sexo_usu</td>
+                    </tr>
+                    <tr>
+                        <td>Correo: </td>
+                        <td>@usuario.email_usu</td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-md-5">
+        <div class="panel panel-default">
+            <div class="panel-heading">Personas compatibles</div>
+            <div class="panel-body" style="max-height:30em;overflow-y:scroll;">
+                <table class="table table-hover">
+                    @foreach (var usu in ViewBag.usuarios as List<Dominio.Core.Entities.Usuario>)
+                    {
+                        <tr>
+                            <td><img id="foto1" src="~/Fotos/@usu.foto" width="171" height="180" /></td>
+                            <td>
+                                <table>
+                                    <tr><td>@usu.porcentaje %</td></tr>
+                                    <tr><td>Nombre: </td><td>@usu.nom_usu</td></tr>
+                                    <tr><td>Apellidos: </td><td>@usu.apePat_usu @usu.apeMat_usu</td></tr>
+                                    <tr><td>Edad:</td><td>@usu.calcularEdad(usu.fecNac_usu)</td></tr>
+
+                                    @using (@Html.BeginForm("OpcionesPareja","Usuario",FormMethod.Post))
+                                    {
+                                        <tr><td>
+                                            <input type="hidden" name="cod_usu2" value="@usu.cod_usu"/>
+                                            
+                                            <input type="submit" name="mensaje" value="Mensaje"/>
+                                            </td></tr>
+                                        <tr><td>
+                                            <input type="submit" name="favorito" value="Agregar Favoritos"/>
+                                            </td></tr>
+                                    }
+
+                                    
+                                </table>
+                            </td>
+                        </tr>
+                    }
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
